[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drw-crypto-prediction"
version = "0.1.0"
description = "Utilities for DRW Crypto Market Prediction"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "DRW"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
